src/test/resources/type/bad/bad-1.ml
int i = "hello world"; // not a valid assignment, should be an int